# vassar

./: .gitignore  OUTLINE.md  README.md  crud.py  docker-compose.yaml  example.md  load_data.py  pyproject.toml
app/vassar-api/src/main/kotlin/org/vassar/api/: DataInitializer.kt  Neo4jConfig.kt  Postnomial.kt
app/vassar-api/src/main/kotlin/org/vassar/api/adapter/in/web/: PersonController.kt
app/vassar-api/src/main/kotlin/org/vassar/api/domain/: Email.kt  Gender.kt  Postnomial.kt
app/vassar-api/src/main/kotlin/org/vassar/api/domain/service/: PersonService.kt
app/vassar-api/src/main/kotlin/org/vassar/api/port/: PersonPort.kt
app/vassar-api/src/main/kotlin/org/vassar/api/port/in/: QueryPeopleUseCase.kt
app/web-app/: package-lock.json  package.json  server.js
app/web-app/public/: app.js  index.html
data/: authors.csv  belongs_to_series.csv  books.csv
graph-db/: authors.csv  books.csv  overview.md  project.md  sample.json  series.csv  wrote_relationship.csv
graph-db/vassar-api/: build.gradle  settings.gradle
graph-db/vassar-api/src/main/kotlin/org/vassar/api/: DataInitializer.kt  VassarApiApplication.kt
graph-db/vassar-api/src/main/kotlin/org/vassar/api/adapter/in/web/: PersonController.kt
graph-db/vassar-api/src/main/kotlin/org/vassar/api/port/in/: LoadPersonUseCase.kt
graph-db/vassar-api/src/main/resources/: application.properties
graph-db/vassar-api/src/test/kotlin/org/vassar/api/: VassarApiApplicationTests.kt
n4jdb/import/books/: belongs_to_series.csv  series.csv  wrote_relationship.csv
n4jdb/import/vassar/: person-save.csv  person.csv  relationship-save.csv  relationships.csv
public/js/: graph.js  tree.js
src/vassar/: .env  books.py  components.py  database.py  history.py  llm.py  main.py  tree.py
web-app/: README.md  pyproject.toml
web-app/src/: .sesskey
web-app/src/app/: database.py  graph.js  main.py
